Index page finished, start on profile page
More or less finished the home page/feed and started work on the profile page

--- a/index.html
+++ b/index.html
@@ -14,18 +14,115 @@
         <img src = "/media/fbprofilbilde.jpg" class = "w-10 h-10 rounded-circle profile-picture">
       </div>
       <form class = "p-3">
-        <input type = "text" class = "search">
+        <input type = "text" class = "search ">
       </form>
     </nav>
   </header>
   <main>
-    <div class = "flex-direction-column">
-      <div class = "profile-picture-container">
+    <h1 class = "text-center p-3">Socials Feed</h1>
+    <div class = "d-flex w-100 justify-content-between">
+      <div class = "profile-picture-container p-3">
         <img src = "media/fbprofilbilde.jpg" class = "w-10 h-10 rounded-circle profile-picture">
       </div>
-      <form>
-        <textarea placeholder = "What's on your mind?" class = "post"></textarea>
+      <form class = "p-3 w-100">
+        <textarea placeholder = "What's on your mind?" class = "post" width = "200px"></textarea>
       </form>
+    </div>
+    <div><hr class = "divider m-1"></div>
+    <div class = "post-friend my-5">
+      <div class = "d-flex">
+        <div class = "profile-picture-container p-3">
+          <img src ="/media/pexels-ali-pazani-2613260.jpg" class = "profile-picture rounded-circle">
+        </div>
+        <div class = "post-container p-3">
+          <div class = "post-name">
+            <h2>Alison</h2>
+          </div>
+          <div class = "post-message">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, atque veniam similique tempore fugiat aliquid!</p>
+          </div>
+        </div>
+      </div>
+      <div class = "interactions d-flex">
+        <button class = "comment w-50 btn btn-primary bg-dark rounded-0 border-dark">Comment</button>
+        <button class = "like w-50 btn btn-primary bg-dark rounded-0 border-dark">Like</button>
+      </div>
+    </div>
+    <div class = "post-friend my-5">
+      <div class = "d-flex">
+        <div class = "profile-picture-container p-3">
+          <img src ="/media/pexels-andrea-piacquadio-774909.jpg" class = "profile-picture rounded-circle">
+        </div>
+        <div class = "post-container p-3">
+          <div class = "post-name">
+            <h2>Jennifer</h2>
+          </div>
+          <div class = "post-message">
+            <p>Lorem ipsum dolor sit amet consectetur.</p>
+          </div>
+        </div>
+      </div>
+      <div class = "interactions d-flex">
+        <button class = "comment w-50 btn btn-primary bg-dark rounded-0 border-dark">Comment</button>
+        <button class = "like w-50 btn btn-primary bg-dark rounded-0 border-dark">Like</button>
+      </div>
+    </div>
+    <div class = "post-friend my-5">
+      <div class = "d-flex">
+        <div class = "profile-picture-container p-3">
+          <img src ="/media/pexels-andrew-personal-training-697509.jpg" class = "profile-picture rounded-circle">
+        </div>
+        <div class = "post-container p-3">
+          <div class = "post-name">
+            <h2>Andrew</h2>
+          </div>
+          <div class = "post-message">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quidem aliquam dolore.</p>
+          </div>
+        </div>
+      </div>
+      <div class = "interactions d-flex">
+        <button class = "comment w-50 btn btn-primary bg-dark rounded-0 border-dark">Comment</button>
+        <button class = "like w-50 btn btn-primary bg-dark rounded-0 border-dark">Like</button>
+      </div>
+    </div>
+    <div class = "post-friend my-5">
+      <div class = "d-flex">
+        <div class = "profile-picture-container p-3">
+          <img src ="/media/pexels-italo-melo-2379004.jpg" class = "profile-picture rounded-circle">
+        </div>
+        <div class = "post-container p-3">
+          <div class = "post-name">
+            <h2>Jake</h2>
+          </div>
+          <div class = "post-message">
+            <p>Lorem, ipsum.</p>
+          </div>
+        </div>
+      </div>
+      <div class = "interactions d-flex">
+        <button class = "comment w-50 btn btn-primary bg-dark rounded-0 border-dark">Comment</button>
+        <button class = "like w-50 btn btn-primary bg-dark rounded-0 border-dark">Like</button>
+      </div>
+    </div>
+    <div class = "post-friend my-5">
+      <div class = "d-flex">
+        <div class = "profile-picture-container p-3">
+          <img src ="/media/pexels-pixabay-415829.jpg" class = "profile-picture rounded-circle">
+        </div>
+        <div class = "post-container p-3">
+          <div class = "post-name">
+            <h2>Clara</h2>
+          </div>
+          <div class = "post-message">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus explicabo consequatur provident vitae exercitationem, iusto doloremque laudantium consequuntur, incidunt porro, cupiditate aliquid nostrum.</p>
+          </div>
+        </div>
+      </div>
+      <div class = "interactions d-flex">
+        <button class = "comment w-50 btn btn-primary bg-dark rounded-0 border-dark">Comment</button>
+        <button class = "like w-50 btn btn-primary bg-dark rounded-0 border-dark">Like</button>
+      </div>
     </div>
   </main>
 
