--- a/index.html
+++ b/index.html
@@ -6,16 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Socials | Feed</title>
   <link rel = "stylesheet" href = "/dist/css/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 <body>
-  <header>
-    <nav class = "navbar bg-dark">
+  <header class = "bg-dark">
+    <nav class = "navbar">
       <div class = "p-2">
         <img src = "/media/fbprofilbilde.jpg" class = "w-10 h-10 rounded-circle profile-picture">
       </div>
-      <form class = "p-3">
-        <input type = "text" class = "search ">
-      </form>
+      <div class = "s-icon p-3">
+        <span class="material-symbols-outlined">
+          search
+        </span>
+      </div>
+      <div class = "search hidden">
+        <form class = "p-3 align-content-center d-flex">
+          <input type = "text" class = "search ">
+          <span class="material-symbols-outlined close pl-3">
+            close
+            </span>
+        </form>
+      </div>
     </nav>
   </header>
   <main>
@@ -129,5 +140,6 @@
 
 
   <script src = "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src = "script.js"></script>
 </body>
 </html>
