Finishing up based on feedback and ready to submit

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel = "stylesheet" href = "/dist/css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
-<body> 
+<body>
   <header class = "bg-dark d-flex flex-column">
     <nav class = "navbar w-100">
       <div class = "p-2 hidden header-profile">
@@ -39,7 +39,7 @@
         <img src = "media/fbprofilbilde.jpg" class = "w-10 h-10 rounded-circle profile-picture">
       </div>
       <form class = "p-3 w-100 d-flex flex-column">
-        <textarea placeholder = "What's on your mind?" class = "post" width = "200px"></textarea>
+        <textarea placeholder = "What's on your mind?" class = "post"></textarea>
         <button class = "btn btn-primary mt-3">POST</button>
       </form>
     </div>
@@ -60,6 +60,7 @@
       </div>
       <div class = "interactions d-flex">
         <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
+        <div><hr class = "divider m-1"></div>
         <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
       </div>
     </div>
@@ -79,6 +80,7 @@
       </div>
       <div class = "interactions d-flex">
         <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
+        <div><hr class = "divider m-1"></div>
         <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
       </div>
     </div>
@@ -98,6 +100,7 @@
       </div>
       <div class = "interactions d-flex">
         <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
+        <div><hr class = "divider m-1"></div>
         <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
       </div>
     </div>
@@ -117,6 +120,7 @@
       </div>
       <div class = "interactions d-flex">
         <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
+        <div><hr class = "divider m-1"></div>
         <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
       </div>
     </div>
@@ -136,6 +140,7 @@
       </div>
       <div class = "interactions d-flex">
         <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
+        <div><hr class = "divider m-1"></div>
         <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
       </div>
     </div>
