--- a/profile.html
+++ b/profile.html
@@ -46,19 +46,19 @@
       <div><hr class = "divider m-1"></div>
       <h3>Friends:</h3>
       <div class = "friend d-flex flex-row justify-content-around p-3">
-        <div class = "friend-container">
+        <div class = "friend-container w-auto">
           <img src = "media/pexels-andrea-piacquadio-774909.jpg" class = "rounded-circle profile-picture">
         </div>
-        <div class = "friend-container">
+        <div class = "friend-container w-auto">
           <img src = "media/pexels-andrew-personal-training-697509.jpg" class = "rounded-circle profile-picture">
         </div>
-        <div class = "friend-container">
+        <div class = "friend-container w-auto">
           <img src = "media/pexels-italo-melo-2379004.jpg" class = "rounded-circle profile-picture">
         </div>
-        <div class = "friend-container">
+        <div class = "friend-container w-auto">
           <img src = "media/pexels-pixabay-415829.jpg" class = "rounded-circle profile-picture">
         </div>
-        <div class = "friend-container profile-picture-container">
+        <div class = "friend-container w-auto profile-picture-container">
           <img src = "media/pexels-stefan-stefancik-91227.jpg" class = "rounded-circle profile-picture">
         </div>
       </div>
