--- a/login.html
+++ b/login.html
@@ -37,11 +37,11 @@
       <form action = "/profile.html" class = "d-flex flex-column w-50 mx-auto">
         <div class = "d-flex flex-column m-3">
           <label for = "username">Username:</label>
-          <input id = "username" type = "text" class = "">
+          <input id = "username" type = "text" class = "" required>
         </div>
         <div class = "d-flex flex-column m-3">
         <label for = "password" class = "">Password:</label>
-        <input id = "password" class = "" type = "password">
+        <input id = "password" class = "" type = "password" required>
         </div>
         <button class = "btn btn-primary m-3">Log in</button>
       </form>
