Trying to fix mistakes made resolving merge conflict

--- a/profile.html
+++ b/profile.html
@@ -89,6 +89,7 @@
         </div>
         <div class = "interactions d-flex">
           <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
+          <div><hr class = "divider m-1"></div>
           <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
         </div>
       </div>
@@ -108,6 +109,7 @@
         </div>
         <div class = "interactions d-flex">
           <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
+          <div><hr class = "divider m-1"></div>
           <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
         </div>
       </div>
@@ -127,6 +129,7 @@
         </div>
         <div class = "interactions d-flex">
           <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
+          <div><hr class = "divider m-1"></div>
           <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
         </div>
       </div>
@@ -146,6 +149,7 @@
         </div>
         <div class = "interactions d-flex">
           <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
+          <div><hr class = "divider m-1"></div>
           <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
         </div>
       </div>
@@ -165,6 +169,7 @@
         </div>
         <div class = "interactions d-flex">
           <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
+          <div><hr class = "divider m-1"></div>
           <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
         </div>
       </div>
