fixing a bug in firefox

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h1 class = "text-center p-3">Socials Feed</h1>
     <div class = "d-flex w-100 justify-content-between">
       <div class = "profile-picture-container p-3">
-        <img src = "media/fbprofilbilde.jpg" class = "w-10 h-10 rounded-circle profile-picture">
+        <img src = "media/fbprofilbilde.jpg" class = "w-10 h-10 rounded-circle profile-picture h-10">
       </div>
       <form class = "p-3 w-100 d-flex flex-column">
         <textarea placeholder = "What's on your mind?" class = "post"></textarea>
@@ -47,7 +47,7 @@
     <div class = "post-friend my-5">
       <div class = "d-flex">
         <div class = "profile-picture-container p-3">
-          <img src ="/media/pexels-ali-pazani-2613260.jpg" class = "profile-picture rounded-circle">
+          <img src ="/media/pexels-ali-pazani-2613260.jpg" class = "profile-picture rounded-circle h-10">
         </div>
         <div class = "post-container p-3">
           <div class = "post-name">
@@ -67,7 +67,7 @@
     <div class = "post-friend my-5">
       <div class = "d-flex">
         <div class = "profile-picture-container p-3">
-          <img src ="/media/pexels-andrea-piacquadio-774909.jpg" class = "profile-picture rounded-circle">
+          <img src ="/media/pexels-andrea-piacquadio-774909.jpg" class = "profile-picture rounded-circle h-10">
         </div>
         <div class = "post-container p-3">
           <div class = "post-name">
@@ -87,7 +87,7 @@
     <div class = "post-friend my-5">
       <div class = "d-flex">
         <div class = "profile-picture-container p-3">
-          <img src ="/media/pexels-andrew-personal-training-697509.jpg" class = "profile-picture rounded-circle">
+          <img src ="/media/pexels-andrew-personal-training-697509.jpg" class = "profile-picture rounded-circle h-10">
         </div>
         <div class = "post-container p-3">
           <div class = "post-name">
@@ -107,7 +107,7 @@
     <div class = "post-friend my-5">
       <div class = "d-flex">
         <div class = "profile-picture-container p-3">
-          <img src ="/media/pexels-italo-melo-2379004.jpg" class = "profile-picture rounded-circle">
+          <img src ="/media/pexels-italo-melo-2379004.jpg" class = "profile-picture rounded-circle h-10">
         </div>
         <div class = "post-container p-3">
           <div class = "post-name">
@@ -127,7 +127,7 @@
     <div class = "post-friend my-5">
       <div class = "d-flex">
         <div class = "profile-picture-container p-3">
-          <img src ="/media/pexels-pixabay-415829.jpg" class = "profile-picture rounded-circle">
+          <img src ="/media/pexels-pixabay-415829.jpg" class = "profile-picture rounded-circle h-10">
         </div>
         <div class = "post-container p-3">
           <div class = "post-name">
