--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Socials | Log in</title>
+  <title>Socials | Register</title>
   <link rel = "stylesheet" href = "/dist/css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
@@ -33,24 +33,31 @@
       </div>
     </header>
     <main>
-      <h1 class = "text-center m-3">Log in</h1>
-      <form action = "/profile.html" class = "d-flex flex-column w-50 mx-auto">
+      <h1 class = "text-center m-3">Register a new profile</h1>
+      <form class = "d-flex flex-column w-50 mx-auto registration">
+        <div class = "d-flex flex-column m-3">
+          <label for = "email">Email:</label>
+          <input id = "email" type = "email" class = "" required placeholder = "Must be a valid noroff email">
+        </div>
         <div class = "d-flex flex-column m-3">
           <label for = "username">Username:</label>
-          <input id = "username" type = "text" class = "" required>
+          <input id = "username" type = "text" class = "" required placeholder = "Your username">
         </div>
         <div class = "d-flex flex-column m-3">
-        <label for = "password" class = "">Password:</label>
-        <input id = "password" class = "" type = "password" required>
+          <label for = "password" class = "">Password:</label>
+          <input id = "password" class = "" type = "password" required placeholder="Atleast 8 characters">
         </div>
-        <button class = "btn btn-primary m-3">Log in</button>
-        <button class = "btn btn-primary mx-3 register">Register</button>
+        <div class = "d-flex flex-column m-3">
+          <label for = "confirm" class = "">Confirm Password:</label>
+          <input id = "confirm" class = "" type = "password" required>
+          </div>
+        <button class = "btn btn-primary m-3 register">Register</button>
       </form>
     </main>
     <footer class = "bg-primary">
       <p class = "text-light text-center fs-4 p-2 logout">Log out</p>
       <h4 class = "m-0 p-3 text-light text-center">©Kristoffer Mikkelsen</h4>
     </footer>
-    <script src = "/scripts/login.js"></script>
+    <script src = "/scripts/register.mjs" type = module></script>
   </body>
 </html>
