Registration, login and feed
Forgot to start a new branch so this branch contains all those tree features

--- a/index.html
+++ b/index.html
@@ -44,105 +44,8 @@
       </form>
     </div>
     <div><hr class = "divider m-1"></div>
-    <div class = "post-friend my-5">
-      <div class = "d-flex">
-        <div class = "profile-picture-container p-3">
-          <img src ="/media/pexels-ali-pazani-2613260.jpg" class = "profile-picture rounded-circle h-10">
-        </div>
-        <div class = "post-container p-3">
-          <div class = "post-name">
-            <h2>Alison</h2>
-          </div>
-          <div class = "post-message">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, atque veniam similique tempore fugiat aliquid!</p>
-          </div>
-        </div>
-      </div>
-      <div class = "interactions d-flex">
-        <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
-        <div><hr class = "divider m-1"></div>
-        <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
-      </div>
-    </div>
-    <div class = "post-friend my-5">
-      <div class = "d-flex">
-        <div class = "profile-picture-container p-3">
-          <img src ="/media/pexels-andrea-piacquadio-774909.jpg" class = "profile-picture rounded-circle h-10">
-        </div>
-        <div class = "post-container p-3">
-          <div class = "post-name">
-            <h2>Jennifer</h2>
-          </div>
-          <div class = "post-message">
-            <p>Lorem ipsum dolor sit amet consectetur.</p>
-          </div>
-        </div>
-      </div>
-      <div class = "interactions d-flex">
-        <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
-        <div><hr class = "divider m-1"></div>
-        <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
-      </div>
-    </div>
-    <div class = "post-friend my-5">
-      <div class = "d-flex">
-        <div class = "profile-picture-container p-3">
-          <img src ="/media/pexels-andrew-personal-training-697509.jpg" class = "profile-picture rounded-circle h-10">
-        </div>
-        <div class = "post-container p-3">
-          <div class = "post-name">
-            <h2>Andrew</h2>
-          </div>
-          <div class = "post-message">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quidem aliquam dolore.</p>
-          </div>
-        </div>
-      </div>
-      <div class = "interactions d-flex">
-        <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
-        <div><hr class = "divider m-1"></div>
-        <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
-      </div>
-    </div>
-    <div class = "post-friend my-5">
-      <div class = "d-flex">
-        <div class = "profile-picture-container p-3">
-          <img src ="/media/pexels-italo-melo-2379004.jpg" class = "profile-picture rounded-circle h-10">
-        </div>
-        <div class = "post-container p-3">
-          <div class = "post-name">
-            <h2>Jake</h2>
-          </div>
-          <div class = "post-message">
-            <p>Lorem, ipsum.</p>
-          </div>
-        </div>
-      </div>
-      <div class = "interactions d-flex">
-        <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
-        <div><hr class = "divider m-1"></div>
-        <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
-      </div>
-    </div>
-    <div class = "post-friend my-5">
-      <div class = "d-flex">
-        <div class = "profile-picture-container p-3">
-          <img src ="/media/pexels-pixabay-415829.jpg" class = "profile-picture rounded-circle h-10">
-        </div>
-        <div class = "post-container p-3">
-          <div class = "post-name">
-            <h2>Clara</h2>
-          </div>
-          <div class = "post-message">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus explicabo consequatur provident vitae exercitationem, iusto doloremque laudantium consequuntur, incidunt porro, cupiditate aliquid nostrum.</p>
-          </div>
-        </div>
-      </div>
-      <div class = "interactions d-flex">
-        <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
-        <div><hr class = "divider m-1"></div>
-        <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
-      </div>
+    <div class = "feed-container">
+      
     </div>
   </main>
   <footer class = "bg-primary">
@@ -150,6 +53,6 @@
     <h4 class = "m-0 p-3 text-light text-center">©Kristoffer Mikkelsen</h4>
   </footer>
   <script src = "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src = "script.js"></script>
+  <script src = "/scripts/index.mjs" type = module></script>
 </body>
 </html>
