--- a/login.html
+++ b/login.html
@@ -34,14 +34,15 @@
     </header>
     <main>
       <h1 class = "text-center m-3">Log in</h1>
-      <form action = "/profile.html" class = "d-flex flex-column w-50 mx-auto">
+      <div class = "m-3 text-center w-100 error-div"></div>
+      <form class = "d-flex flex-column w-50 mx-auto login">
         <div class = "d-flex flex-column m-3">
-          <label for = "username">Username:</label>
-          <input id = "username" type = "text" class = "" required>
+          <label for = "email">Email:</label>
+          <input id = "email" type = "text" class = "" required>
         </div>
         <div class = "d-flex flex-column m-3">
-        <label for = "password" class = "">Password:</label>
-        <input id = "password" class = "" type = "password" required>
+          <label for = "password" class = "">Password:</label>
+          <input id = "password" class = "" type = "password" required>
         </div>
         <button class = "btn btn-primary m-3">Log in</button>
         <button class = "btn btn-primary mx-3 register">Register</button>
@@ -51,6 +52,6 @@
       <p class = "text-light text-center fs-4 p-2 logout">Log out</p>
       <h4 class = "m-0 p-3 text-light text-center">©Kristoffer Mikkelsen</h4>
     </footer>
-    <script src = "/scripts/login.js"></script>
+    <script src = "/scripts/login.mjs" type = module></script>
   </body>
 </html>
