--- a/register.html
+++ b/register.html
@@ -34,8 +34,9 @@
     </header>
     <main>
       <h1 class = "text-center m-3">Register a new profile</h1>
+      <div class = "m-3 text-center w-100 error-div"></div>
       <form class = "d-flex flex-column w-50 mx-auto registration">
-        <div class = "d-flex flex-column m-3">
+        <div class = "d-flex flex-column m-3 email">
           <label for = "email">Email:</label>
           <input id = "email" type = "email" class = "" required placeholder = "Must be a valid noroff email">
         </div>
@@ -43,13 +44,13 @@
           <label for = "username">Username:</label>
           <input id = "username" type = "text" class = "" required placeholder = "Your username">
         </div>
-        <div class = "d-flex flex-column m-3">
+        <div class = "d-flex flex-column m-3 password">
           <label for = "password" class = "">Password:</label>
           <input id = "password" class = "" type = "password" required placeholder="Atleast 8 characters">
         </div>
-        <div class = "d-flex flex-column m-3">
+        <div class = "d-flex flex-column m-3 confirm">
           <label for = "confirm" class = "">Confirm Password:</label>
-          <input id = "confirm" class = "" type = "password" required>
+          <input id = "confirm" class = "" type = "password" required placeholder = "Must match password above">
           </div>
         <button class = "btn btn-primary m-3 register">Register</button>
       </form>
