Finished new post function

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
       <div class = "profile-picture-container p-3">
         <img src = "media/fbprofilbilde.jpg" class = "w-10 h-10 rounded-circle profile-picture h-10">
       </div>
-      <form class = "p-3 w-100 d-flex flex-column">
+      <form class = "p-3 w-100 d-flex flex-column new-post">
+        <input type = "text" class = "mb-1 border-light border-rounded post-title">
         <textarea placeholder = "What's on your mind?" class = "post"></textarea>
         <button class = "btn btn-primary mt-3">POST</button>
       </form>
