--- a/profile.html
+++ b/profile.html
@@ -73,111 +73,12 @@
         </form>
       </div>
       <div><hr class = "divider m-1"></div>
-      <div class = "post-friend my-5">
-        <div class = "d-flex">
-          <div class = "profile-picture-container p-3">
-            <img src ="/media/pexels-ali-pazani-2613260.jpg" class = "profile-picture rounded-circle">
-          </div>
-          <div class = "post-container p-3">
-            <div class = "post-name">
-              <h2>Alison</h2>
-            </div>
-            <div class = "post-message">
-              <p>Something alison posted</p>
-            </div>
-          </div>
-        </div>
-        <div class = "interactions d-flex">
-          <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
-          <div><hr class = "divider m-1"></div>
-          <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
-        </div>
-      </div>
-      <div class = "post-friend my-5">
-        <div class = "d-flex">
-          <div class = "profile-picture-container p-3">
-            <img src ="/media/pexels-ali-pazani-2613260.jpg" class = "profile-picture rounded-circle">
-          </div>
-          <div class = "post-container p-3">
-            <div class = "post-name">
-              <h2>Alison</h2>
-            </div>
-            <div class = "post-message">
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, atque veniam similique tempore fugiat aliquid!</p>
-            </div>
-          </div>
-        </div>
-        <div class = "interactions d-flex">
-          <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
-          <div><hr class = "divider m-1"></div>
-          <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
-        </div>
-      </div>
-      <div class = "post-friend my-5">
-        <div class = "d-flex">
-          <div class = "profile-picture-container p-3">
-            <img src ="/media/pexels-ali-pazani-2613260.jpg" class = "profile-picture rounded-circle">
-          </div>
-          <div class = "post-container p-3">
-            <div class = "post-name">
-              <h2>Alison</h2>
-            </div>
-            <div class = "post-message">
-              <p>Another thing alison posted Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum, expedita?</p>
-            </div>
-          </div>
-        </div>
-        <div class = "interactions d-flex">
-          <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
-          <div><hr class = "divider m-1"></div>
-          <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
-        </div>
-      </div>
-      <div class = "post-friend my-5">
-        <div class = "d-flex">
-          <div class = "profile-picture-container p-3">
-            <img src ="/media/pexels-ali-pazani-2613260.jpg" class = "profile-picture rounded-circle">
-          </div>
-          <div class = "post-container p-3">
-            <div class = "post-name">
-              <h2>Alison</h2>
-            </div>
-            <div class = "post-message">
-              <p>Alison also posted this</p>
-            </div>
-          </div>
-        </div>
-        <div class = "interactions d-flex">
-          <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
-          <div><hr class = "divider m-1"></div>
-          <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
-        </div>
-      </div>
-      <div class = "post-friend my-5">
-        <div class = "d-flex">
-          <div class = "profile-picture-container p-3">
-            <img src ="/media/pexels-ali-pazani-2613260.jpg" class = "profile-picture rounded-circle">
-          </div>
-          <div class = "post-container p-3">
-            <div class = "post-name">
-              <h2>Alison</h2>
-            </div>
-            <div class = "post-message">
-              <p>This post was not posted by alison</p>
-            </div>
-          </div>
-        </div>
-        <div class = "interactions d-flex">
-          <button class = "comment w-50 btn btn-primary rounded-0 border-dark">Comment</button>
-          <div><hr class = "divider m-1"></div>
-          <button class = "like w-50 btn btn-primary rounded-0 border-dark">Like</button>
-        </div>
-      </div>
+     
     </main>
     <footer class = "bg-primary">
       <p class = "text-light text-center fs-4 p-2 logout">Log out</p>
       <h4 class = "m-0 p-3 text-light text-center">©Kristoffer Mikkelsen</h4>
     </footer>
-    <script src = "script.js"></script>
+    <script src = "/scripts/profile.mjs"></script>
   </body>
 </html>
