Fixing more bugs and chaning some functionality

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
     <div class = "feed-container">
       
     </div>
+    <div class = "button-container d-flex justify-content-center mb-3">
+      <button class = "load btn btn-primary w-50">Load more</button>
+    </div>
   </main>
   <footer class = "bg-primary">
     <p class = "text-light text-center fs-4 p-2 logout">Log out</p>
