starting work on dynamic profiles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class = "navbar w-30 m-auto container">
       <div class = "row w-100 align-items-center">
         <div class = "p-2 hidden header-profile col w-auto justify-self-center">
-          <img src = "/media/fbprofilbilde.jpg" class = "w-10 h-10 rounded-circle profile-picture">
+          <img src = "" class = "w-10 h-10 rounded-circle profile-picture-header">
         </div>
         <div class = "p2 header-login col">
           <a href = "login.html" class = "text-light text-decoration-none fs-6">Log in</a>
