--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class = "navbar w-30 m-auto container">
       <div class = "row w-100 align-items-center">
         <div class = "p-2 hidden header-profile col w-auto justify-self-center">
-          <img src = "" class = "w-10 h-10 rounded-circle profile-picture-header">
+          <img src = "" class = "w-10 h-10 rounded-circle profile-picture-header user-image">
         </div>
         <div class = "p2 header-login col">
           <a href = "login.html" class = "text-light text-decoration-none fs-6">Log in</a>
@@ -35,7 +35,7 @@
     <h1 class = "text-center p-3">Socials Feed</h1>
     <div class = "d-flex w-100 justify-content-between">
       <div class = "profile-picture-container p-3">
-        <img src = "media/fbprofilbilde.jpg" class = "w-10 h-10 rounded-circle profile-picture h-10">
+        <img src = "" class = "w-10 h-10 rounded-circle profile-picture h-10 user-image">
       </div>
       <form class = "p-3 w-100 d-flex flex-column new-post">
         <input type = "text" class = "mb-1 border-light border-rounded post-title">
