--- a/post.html
+++ b/post.html
@@ -39,38 +39,16 @@
       </nav>
     </header>
     <main>
-      <div class = "profile-picture-container d-flex justify-content-center mt-3">
-        <img src = "" class = "profile-picture-profile rounded-circle profile-image">
-      </div>
-      <h1 class = "text-center m-3 profile-name"></h1>
-      <div><hr class = "divider m-1"></div>
-      <div class = "user-info">
-        <p class = "profile-email">Email: </p>
-      </div>
-      <div><hr class = "divider m-1"></div>
-      <div class = "container row text-center">
-        <div class = "col followers">
-          <h2>Followers:</h2>
-          <h3 class = "follower-count"></h3>
-        </div>
-        <div class = "col following">
-          <h2>Following:</h2>
-          <h3 class="following-count"></h3>
-        </div>
-      </div>
-      <div><hr class = "divider m-1"></div>
-      <section class = "user-posts">
-        <h2 class="text-center heading"></h2>
-        <div class = "feed-container">
+      <div class="feed-container">
 
-        </div>
-      </section>
+      </div>
+
     </main>
     <footer class = "bg-primary">
       <p class = "text-light text-center fs-4 p-2 logout">Log out</p>
       <h4 class = "m-0 p-3 text-light text-center">©Kristoffer Mikkelsen</h4>
     </footer>
-    <script src = "/scripts/profile.mjs" type = module></script>
+    <script src = "/scripts/post.mjs" type = module></script>
     <script src = "/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
