Update post and design
Implemented last feature and fixed some design errors

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <div class = "col justify-content-center w-auto"> 
           <a href = "index.html" class = "text-light text-center justify-self-center text-decoration-none fs-4 justify-self-center w-33">Home</a>
         </div>
-        <div class = "s-icon col w-auto">
-          <div class = "search-field w-100 ms-100">
-            <form class = "p-3 align-content-center justify-content-center d-flex search-form">
-              <input type = "text" class = "search ">
+        <div class = "s-icon col w-100">
+          <div class = "search-field ">
+            <form class = "search-form w-100 m-0">
+              <input type = "text" class = "search form-control w-100" placeholder = "Title, author or id">
             </form>
           </div>
         </div>
@@ -45,8 +45,8 @@
         <a href = "profile.html"><img src = "" class = "w-10 h-10 rounded-circle profile-picture h-10 user-image"></a>
       </div>
       <form class = "p-3 w-100 d-flex flex-column new-post">
-        <input type = "text" class = "mb-1 border-light border-rounded post-title">
-        <textarea placeholder = "What's on your mind?" class = "post"></textarea>
+        <input type = "text" class = "mb-1 form-control post-title" placeholder = "Post title">
+        <textarea placeholder = "What's on your mind?" class = "post form-control"></textarea>
         <button class = "btn btn-primary mt-3">POST</button>
       </form>
     </div>
