--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
         </div>
       </nav>
       <div class = "search-field w-100 ms-100 hidden">
-        <form class = "p-3 align-content-center justify-content-end d-flex">
+        <form class = "p-3 align-content-center justify-content-end d-flex search-form">
           <input type = "text" class = "search ">
         </form>
       </div>
