--- a/post.html
+++ b/post.html
@@ -31,7 +31,7 @@
           <div class = "s-icon col w-auto">
             <div class = "search-field w-100 ms-100">
               <form class = "p-3 align-content-center justify-content-center d-flex search-form">
-                <input type = "text" class = "search ">
+                <input type = "text" class = "search hidden">
               </form>
             </div>
           </div>
