--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <header class = "bg-dark d-flex flex-column">
       <nav class = "navbar w-100">
         <div class = "p-2 hidden header-profile">
-          <img src = "/media/fbprofilbilde.jpg" class = "w-10 h-10 rounded-circle profile-picture">
+          <img src = "" class = "w-10 h-10 rounded-circle profile-picture">
         </div>
         <div class = "p2 header-login">
           <a href = "login.html" class = "text-light text-decoration-none fs-6">Log in</a>
